--- a/resume/resume-style.css
+++ b/resume/resume-style.css
@@ -2,7 +2,7 @@ body {
     background-color: #222;
     color: #ffffff;
     font-family: 'Montserrat', sans-serif;
-    min-width: 1100px;
+    min-width: 1156px;
     margin: 0;
     padding: 0;
 }
@@ -72,12 +72,15 @@ body {
 }
 
 .container .mid .content-pane h1 {
-    color: #4e0db6;
+    color: #2b8438;
+    font-size: 27px;
+    font-weight: 200;
+    margin-top: 50px;
 }
 
 .container .mid .content-pane .about .details .details-title {
     margin-right: 10px;
-    color: #4e0db6;
+    color: #2b8438;
 }
 
 .container .mid .content-pane .about .details .phone {
@@ -101,23 +104,22 @@ body {
     display: flex;
     border: 3px solid #444;
     border-radius: 4px;
-    min-width: 500px;
+    max-width: 400px;
+    min-width: 400px;
     margin: 5px;
 }
 
 .employers .employer .logo {
     flex-basis: 20%;
     background-color: #444;
-    width: 100%;
-    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.employers .employer .logo img {
-    width: 40px;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    padding: 30px;
+.employers .employer .logo .count {
+    font-size: 30px;
+    font-weight: 600;
 }
 
 .employers .employer .detail {
@@ -126,18 +128,18 @@ body {
 }
 
 .employers .employer .detail .company-name {
-    font-size: 15px;
-    font-weight: 700;
+    font-size: 15 px;
+    font-weight: 400;
 }
 
 .employers .employer .detail .designation {
     font-size: 12px;
-    color: #444;
+    color: #4caf50;
     font-weight: 500;
 }
 
 .employers .employer .detail .tenure {
     font-size: 12px;
     font-weight: 500;
-    color: #444;
+    color: #7d7d7d;
 }
